# dotfiles

./: .gitignore  .sops.yaml  AGENTS.md  CLAUDE.md  GEMINI.md  Justfile  README.md  flake.nix  justfile
.claude/: settings.local.json
.github/workflows/: check.yml  deploy.yml  docs.yml  update.yml
config/dank-material-shell/: session.json  settings.json
config/fcitx5/: profile
config/hypr/: hyprland.lua
config/hypr/hypr/: appearance.lua  binds.lua  core.lua  input.lua  lib.lua  rules.lua  startup.lua
config/hypr/plugins/: dynamic-cursors.lua
config/kanata/: darwin.kbd  linux.kbd
config/karabiner/: karabiner.json
config/noctalia/: plugins.json  settings.json
config/nvim/: lazyvim.json
docs/: MIHOMO_QUICKSTART.md  MIHOMO_USAGE.md  SOPS.md  SSH_CONFIG.md  astro.config.mjs  package-lock.json  package.json
docs/src/styles/: custom.css
flake/: deploy.nix  devshell.nix  formatter.nix  hosts.nix  overlays.nix  pre-commit-hooks.nix  templates.nix
flakes/: devshell.nix  formatter.nix  hosts.nix
hosts/: default.nix
hosts/artemis/: config.nix  hardware-configuration.nix
hosts/athena/: config.nix
hosts/common/: cli.nix  dev.nix  nvim.nix
hosts/common/disko/: athena-volume.nix  bios-ext4.nix  btrfs.nix  ext4.nix  luks-btrfs-tmpfs.nix  luks-lvm-btrfs-tmpfs.nix  luks-lvm-btrfs.nix  zfs-nas.nix  zfs-tmpfs.nix  zfs.nix
hosts/eir/: config.nix
hosts/installer/: config.nix  default.nix  hardware-configuration.nix
hosts/loki/: config.nix  default.nix  host.pub
hosts/mimir/: config.nix  default.nix  todo.md
hosts/nidhogg/: config.nix
hosts/sigurd/: config.nix  default.nix  hardware-configuration.nix
hosts/tyr/: config.nix  default.nix
hosts/ymir/: asus-dialpad.nix  config.nix
lib/: commands.nix  core.nix  default.nix  geometry.nix  hardware.nix  helper.nix  modules.nix  paths.nix  theme.nix  users.nix  workspaces.nix
modules/common/: home-manager.nix  secrets.nix  yubikey.nix
modules/common/ai/: default.nix  skills.nix
modules/common/dot/: default.nix  gui.nix  profiles.nix  yubikey.nix
modules/common/environment/: font.nix  fonts.nix  packages.nix  secrets.nix  time.nix  user.nix  vars.nix
modules/common/my/: default.nix  desktop.nix  gui.nix  keyboard.nix  networking.nix  yubikey.nix
modules/common/networking/: default.nix  tailscale.nix
modules/common/nix/: environment.nix  git.nix  nix.nix  nixpkgs.nix  substituters.nix  system.nix
modules/darwin/: default.nix  kanata.nix  karabiner.nix  nix.nix  users.nix
modules/darwin/brew/: default.nix  environment.nix
modules/darwin/networking/: clash.nix  mihomo.nix  tailscale.nix
modules/darwin/preferences/: default.nix  keyboard.nix
modules/home/: default.nix  home.nix
modules/home/cli/: default.nix  pentesting.nix
modules/home/environment/: colorscheme.nix  fonts.nix  impermanence.nix  nix.nix  secrets.nix  vars.nix  xdg.nix
modules/home/langs/: cc.nix  default.nix  java.nix  lua.nix  node.nix  python.nix  r.nix  rust.nix  shell.nix
modules/home/theme/: cursor.nix  default.nix  gtk.nix
modules/nixos/: default.nix  nix.nix
modules/nixos/boot/: default.nix  plymouth.nix  secureBoot.nix  tmpfs.nix
modules/nixos/environment/: btrbk.nix  colorscheme.nix  console.nix  documentation.nix  fhs.nix  font.nix  fonts.nix  impermanence.nix  locale.nix  misc.nix  packages.nix  preservation.nix  time.nix  users.nix  zram.nix
modules/nixos/gaming/: gamemode.nix  steam.nix
modules/nixos/hardware/: bluetooth.nix  filesystems.nix  fs.nix  hidpi.nix  printer.nix  touchpad.nix  tpm.nix  yubikey.nix
modules/nixos/kernel/: blacklisted-modules.nix  package.nix  params.nix  sysctl.nix
modules/shared/: home-manager.nix  yubikey.nix
overlays/: ai.nix  ast-grep.nix  firefox-addons.nix  inputs.nix  nixpkgs-fixes.nix  qt6FcitxNoCfgtool.nix  tokyonight-nvim.nix  vimTeaks.nix
overlays/gtk3/: sincos.patch
scripts/: yubikey-ssh-setup.sh
secrets/core/: eir.yaml  id_ed25519.yaml  loki.yaml  nidhogg.yaml  sigurd.yaml  ymir.yaml
secrets/johnson/: codex-auth  default.yaml  gemini-google_accounts  gemini-oauth_creds  github-copilot  polymarket.yaml  wakatime
secrets/michael/: default.yaml  github-copilot  spotify-player
secrets/services/: calibre.yaml  clash.yaml  cloudflare.yaml  default.yaml  forgejo.yaml  kanidm.yaml  linkwarden.yaml  mailserver.yaml  mihomo.yaml  mullvad.yaml  rsshub.yaml  tailscale.yaml
templates/c/: .envrc  .gitignore  Makefile.in  configure.ac  devenv.nix  flake.nix  hello.c
templates/container/: devenv.nix  flake.nix
templates/cpp/: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  devenv.nix  flake.nix
templates/cpp/nix/: package.nix
templates/cpp/scripts/: generate-compile-commands  run-clang-tidy
templates/cpp/src/: main.cpp
templates/go/: devenv.nix  flake.nix  go.mod
templates/node/: devenv.nix  flake.nix  package-lock.json
templates/python/: .envrc  .gitignore  README.md  devenv.nix  flake.nix  justfile  pyproject.toml
templates/python/.github/workflows/: ci.yml
templates/python/src/sample_python/: __init__.py  __main__.py
templates/python/tests/: test_package.py
templates/qt/: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
templates/qt-quick/: .clang-tidy  .lazy.lua  .typos.toml  CMakeLists.txt  CMakePresets.json  README.md  flake.nix  justfile
templates/qt-quick/.github/workflows/: ci.yml
templates/qt-quick/include/qt_quick_app/: app_model.hpp
templates/qt-quick/nix/: package.nix
templates/qt-quick/qml/: Main.qml  Theme.qml
templates/qt-quick/scripts/: generate-compile-commands  run-clang-tidy
templates/qt-quick/src/: app_model.cpp  main.cpp
templates/qt-quick/tests/: app_model_test.cpp
templates/qt/include/qt_app/: main_window.hpp
templates/qt/nix/: package.nix
templates/qt/src/: main.cpp  main_window.cpp
templates/rust/: .envrc  .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix  justfile
users/: default.nix
users/johnson/: default.nix  persistence.nix
users/michael/: default.nix  persistence.nix
(+830 files in other folders)
