[project]
name = "sample-project"
version = "0.1.0"
description = "Minimal Python development template for Nix using uv2nix."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
sample-project = "package.__main__:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "package"
